Fix "Ensure text remains visible during webfont load"
Add "display=swap" to Google Fonts URL

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
-@import 'https://fonts.googleapis.com/css?family=Inter';
+@import 'https://fonts.googleapis.com/css?family=Inter&display=swap';
 
 /* ******** Global CSS ******** */
 
@@ -51,7 +50,7 @@
 
   /* Font related */
   --code-font: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
-  --font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-size: 20px;
 
   /* Color related */
